--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: http://HenzelMoras.github.io/
 languageCode: en-us
 defaultContentLanguage: en
 title: "Henzel Moras"
