--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -17,7 +17,7 @@ skills:
 
 - name: Django
   logo: "/images/skills/django.png"
-  summary: "I use it for building websites was drawn to it because it uses Python"
+  summary: "I use it for building websites was drawn to it because of Python"
 
 - name: Bash
   logo: "/images/skills/bash.png"
