--- a/config.yaml
+++ b/config.yaml
@@ -69,3 +69,7 @@ params:
   # Currently, you can just hide it from the footer.
   newsletter:
     enable: true
+
+  customMenus:
+  - name: Certification
+    url: /certification
