--- a/config.yaml
+++ b/config.yaml
@@ -51,9 +51,9 @@ params:
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   # It will default to the theme logos if not provided.
   logo:
-    main: /images/site/home.svg
-    inverted: /images/site/home.svg
-    favicon: /images/site/home.svg
+    main: /images/site/logo.png
+    inverted: /images/site/logo.png
+    favicon: /images/site/logo.png
 
   # GitHub repo URL of your site
   #gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
