--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -19,6 +19,9 @@ buttons:
 - name: Hobby
   filter: "hobby"
 
+- name: Opensource
+  filter: "opensource"
+
 # your projects
 projects:
 - name: screen-extensio
@@ -28,7 +31,7 @@ projects:
   repo: https://github.com/HenzelMoras/screen-extensio # If your project is a public repo on GitHub, then provide this link. it will show star count.
   url: "https://github.com/HenzelMoras/screen-extensio"  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Bash Script for using android device as external monitor for Linux.
-  tags: ["hobby", "linux", "bash"]
+  tags: ["hobby", "linux", "bash", "opensource"]
 
 - name: protonmail-gen
   ##logo: /images/sections/projects/tensorflow.png
@@ -37,7 +40,7 @@ projects:
   repo: https://github.com/HenzelMoras/protonmail-gen
   url: "https://github.com/HenzelMoras/protonmail-gen"
   summary: Automate proton mail creation for various uses.
-  tags: ["hobby", "python", "selenium", "linux"]
+  tags: ["hobby", "python", "selenium", "linux", "opensource"]
 
 - name: spotify-adblocker
   role: owner
@@ -45,6 +48,19 @@ projects:
   repo: https://github.com/HenzelMoras/spotify-adblocker
   url: "https://github.com/HenzelMoras/spotify-adblocker"
   summary: Bash script to block spotify ads without premium.
-  tags: ["hobby", "bash", "linux", 'sysadmin']
+  tags: ["hobby", "bash", "linux", 'sysadmin', 'opensource']
 
+- name: toha
+  logo: /images/main-logo.png
+  role: contributor
+  repo: https://github.com/hugo-toha/toha
+  url: "https://github.com/hugo-toha/toha"
+  summary: A static theme created using Hugo 
+  tags: ["go","hugo","css","javascript","html","opensource"]
 
+- name: HenzelMoras.github.io
+  role: owner
+  repo: https://github.com/HenzelMoras/HenzelMoras.github.io
+  url: "https://github.com/HenzelMoras/HenzelMoras.github.io"
+  summary: My Personal blog in which i write about system Administration, Web security and Programming in general
+  tags: ["javascript", "css", "html", "opensource", "hobby"]
