--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -39,13 +39,13 @@ socialLinks:
   icon: "fab fa-linkedin"
   url: "https://www.linkedin.com/in/henzel-moras/"
 
-#- name: Twitter
-#  icon: "fab fa-twitter"
-#  url: "#"
+- name: Tryhackme
+  icon: fab fa-cloudversify
+  url: "https://tryhackme.com/p/s0x45ker"
 
-#- name: Facebook
-#  icon: "fab fa-facebook"
-#  url: "#"
+- name: HackTheBox
+  icon: "fas fa-cube"
+  url: "https://app.hackthebox.eu/profile/overview"
 
 # your soft skills
 # give the percentage between 50 to 100 with 5 intervals.
