--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -31,21 +31,21 @@ socialLinks:
   icon: "fab fa-github"
   url: "https://www.github.com/HenzelMoras"
 
-#- name: Stackoverflow
-#  icon: "fab fa-stack-overflow"
-#  url: "#"
-
 - name: LinkedIn
   icon: "fab fa-linkedin"
   url: "https://www.linkedin.com/in/henzel-moras/"
 
-#- name: Twitter
-#  icon: "fab fa-twitter"
-#  url: "#"
+- name: Tryhackme
+  icon: fab fa-cloudversify
+  url: "https://tryhackme.com/p/s0x45ker"
 
-#- name: Facebook
-#  icon: "fab fa-facebook"
-#  url: "#"
+- name: Coursera
+  icon: "fas fa-copyright"
+  url: "https://www.coursera.org/user/ee2026b444f2f4f975be171a55d5e2fa"
+
+- name: HackTheBox
+  icon: "fas fa-cube"
+  url: "https://app.hackthebox.eu/profile/overview"
 
 # your soft skills
 # give the percentage between 50 to 100 with 5 intervals.
